# interrogate

./: README.md  interrogate.cabal
src/: Interrogate.hs
