name: interrogate
version: 0.1.0.0
synopsis: Parse json 
description: Parse json with good error messages
homepage: https://github.com/andrewthad/interrogate#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: software
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Interrogate
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , vector
    , text
    , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/interrogate
